k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-execution
  labels:
    name: test-execution
    environment: production
